--- a/backend/gaushare/src/main/resources/application.yml
+++ b/backend/gaushare/src/main/resources/application.yml
@@ -1,4 +1,19 @@
+server:
+  port: 8081
+
 spring:
   application:
     name: gaushare
-  
+  datasource:
+    url: jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: ${HB_SHOW_SQL:false}
+    properties:
+      hibernate:
+        format_sql: true
